<resources>
    <string name="app_name">Friends Hiking</string>

    <string name="value_any_category">All Treks</string>
    <string name="value_any_region">Anywhere</string>
    <string name="value_any_time">Anytime</string>

    <string name="value_select_category">Select Treks</string>
    <string name="value_select_region">Select region</string>


    <string name="time_today">Today</string>
    <string name="time_tomorrow">Tomorrow</string>
    <string name="time_this_week">This week</string>
    <string name="time_next_week">Next week</string>
    <string name="time_this_month">This Month</string>
    <string name="time_next_month">Next Month</string>

    <string name="label_category">Category</string>
    <string name="label_region">Region</string>
    <string name="label_price">Price</string>
    <string name="label_sort_by">Sort By</string>

    <string name="fmt_num_registerd" translatable="false">(%d)</string>
    <string name="all_treks">All Treks</string>
    <string name="header_filters">Filter</string>
    <string name="search">Search</string>

    <string name="sort_by_rating">Sort by Rating</string>
    <string name="sort_by_popularity">Sort by Popularity</string>
    <string name="sort_by_time">Sort by Time</string>

    <string name="sorted_by_rating">sorted by register</string>
    <string name="sorted_by_time">sorted by time</string>
    <string name="sorted_by_registration">sorted by registration</string>

    <string name="create_trek">New Trek</string>
    <string name="sign_out">Sign Out</string>
    <string name="delete_all">Delete All</string>
    <string name="divider_bullet" translatable="false">•</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="message_no_results">Oops, couldn\'t find any results\nthat matched your filter</string>
    <string name="message_no_reviews">Be the first to leave a review!</string>
    <string name="submit">Submit</string>
    <string name="filter_register_to_trek">Register to trek</string>
    <string name="hint_register">Thoughts about the trek?</string>
    <string name="hint_trek_details">Trek Details </string>

    <string name="category_item_1">Easy</string>
    <string name="category_item_2">Moderate</string>
    <string name="category_item_3">Difficult</string>
    <string name="category_item_4">Extreme</string>

    <string name="region_item_1">Jerusalem District</string>
    <string name="region_item_2">Northern District</string>
    <string name="region_item_3">Haifa District</string>
    <string name="region_item_4">Central District</string>
    <string name="region_item_5">Tel Aviv District</string>
    <string name="region_item_6">Southern District</string>
    <string name="region_item_7">Judea and Samaria Area</string>

    <!-- Types of food I could think of in 5 minutes -->
    <string-array name="categories">
        <item>@string/value_any_category</item>

        <item>@string/category_item_1</item>
        <item>@string/category_item_2</item>
        <item>@string/category_item_3</item>
        <item>@string/category_item_4</item>

    </string-array>

    <string-array name="categories_create">
        <item>@string/value_select_category</item>

        <item>@string/category_item_1</item>
        <item>@string/category_item_2</item>
        <item>@string/category_item_3</item>
        <item>@string/category_item_4</item>
    </string-array>
    <!-- 50 most populous cities in the US -->
    <string-array name="regions">
        <item>@string/value_any_region</item>

        <item>@string/region_item_1</item>
        <item>@string/region_item_2</item>
        <item>@string/region_item_3</item>
        <item>@string/region_item_4</item>
        <item>@string/region_item_5</item>
        <item>@string/region_item_6</item>
        <item>@string/region_item_7</item>

    </string-array>

    <string-array name="regions_create">
        <item>@string/value_select_region</item>

        <item>@string/region_item_1</item>
        <item>@string/region_item_2</item>
        <item>@string/region_item_3</item>
        <item>@string/region_item_4</item>
        <item>@string/region_item_5</item>
        <item>@string/region_item_6</item>
        <item>@string/region_item_7</item>

    </string-array>

    <!-- time filters -->
    <string-array name="trek_date">
        <item>@string/value_any_time</item>

        <item>@string/time_today</item>
        <item>@string/time_tomorrow</item>
        <item>@string/time_this_week</item>
        <item>@string/time_next_week</item>
        <item>@string/time_this_month</item>
        <item>@string/time_next_month</item>
    </string-array>

    <!-- Ways you can sort restaurants -->
    <string-array name="sort_by">
        <item>@string/sort_by_rating</item>
        <item>@string/sort_by_popularity</item>
        <item>@string/sort_by_time</item>
    </string-array>
    <string name="title_activity_create_trek">CreateTrekActivity</string>
    <string name="trek_date">Trek Date</string>
    <string name="select_image">Select Image</string>
    <string name="uploaded_success">Uploaded</string>
    <string name="uploaded_failed">Uploaded Failed</string>
    <string name="uploading">Uploading...</string>
    <string name="select_an_action">Select an action</string>
    <string name="coming">Coming</string>
    <string name="not_coming">Not Coming</string>
    <string name="facebook_app_id" translatable="false">103261640611897</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb103261640611897</string>
    <string name="whatsapp_group">Whatsapp Group Link</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
