<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/filters_form"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">
    <TextView
        style="@style/AppTheme.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/create_trek"
        tools:hint="@string/hint_trek_details" />
    <ImageView
        android:id="@+id/image_view_trek"
        android:layout_width="100dp"
        android:layout_gravity="center"
        android:layout_height="100dp"
        android:layout_margin="4dp"
        android:alpha="1.0"
        android:tint="@android:color/darker_gray"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/ic_add_a_photo_black_24dp"
        />


    <!-- Trek Type -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/icon_category"
            style="@style/AppTheme.FilterIcon"
            android:layout_alignParentLeft="true"

            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:tint="@color/greySecondary"
            app:srcCompat="@drawable/ic_directions_run_white_24dp" />

        <Spinner
            android:id="@+id/spinner_category"
            style="@style/AppTheme.FilterSpinner"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/icon_category"
            android:entries="@array/categories_create" />

    </RelativeLayout>

    <!-- Location -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/icon_city"
            style="@style/AppTheme.FilterIcon"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:tint="@color/greySecondary"
            app:srcCompat="@drawable/ic_place_white_24px" />

        <Spinner
            android:id="@+id/spinner_region"
            style="@style/AppTheme.FilterSpinner"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/icon_city"
            android:entries="@array/regions_create" />

    </RelativeLayout>


    <!-- Trek Date -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/icon_trek_date"
            style="@style/AppTheme.FilterIcon"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:tint="@color/greySecondary"
            app:srcCompat="@drawable/ic_today_white_24dp" />

        <Button
            android:id="@+id/button_trek_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trek_date"
            android:layout_toRightOf="@+id/icon_trek_date"/>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/icon_trek_whatsapp_groupo"
            style="@style/AppTheme.FilterIcon"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:tint="@color/greySecondary"
            app:srcCompat="@drawable/ic_chat_bubble_outline_white_24dp" />

        <EditText
            android:id="@+id/edit_trek_whatsapp_group"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/icon_trek_whatsapp_groupo"
            android:hint="@string/whatsapp_group"
            android:minLines="1"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />

    </RelativeLayout>
    <!-- Trek Details -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/icon_trek_details"
            style="@style/AppTheme.FilterIcon"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:tint="@color/greySecondary"
            app:srcCompat="@drawable/ic_create_white_24dp" />

        <EditText
            android:id="@+id/edit_trek_details"
            android:layout_centerVertical="true"
            android:maxLines="2"
            android:maxLength="250"
            android:layout_toRightOf="@+id/icon_trek_details"
            android:hint="@string/hint_trek_details"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />

    </RelativeLayout>

    <!-- Cancel and apply buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_cancel"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="@color/greySecondary"
            android:theme="@style/ThemeOverlay.FilterButton" />


        <Button
            android:id="@+id/button_create"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/apply"
            android:theme="@style/ThemeOverlay.FilterButton" />

    </LinearLayout>

</LinearLayout>

