<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/filters_form"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        style="@style/AppTheme.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/create_trek" />

    <!-- Food Type -->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/icon_category"
            style="@style/AppTheme.FilterIcon"
            android:layout_centerVertical="true"
            android:tint="@color/greySecondary"
            app:srcCompat="@drawable/ic_trending_up_white_24dp" />

        <Spinner
            android:id="@+id/spinner_category"
            style="@style/AppTheme.FilterSpinner"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/icon_category"
            android:entries="@array/categories" />

    </RelativeLayout>

    <!-- Location -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/icon_city"
            style="@style/AppTheme.FilterIcon"
            android:layout_centerVertical="true"
            android:tint="@color/greySecondary"
            app:srcCompat="@drawable/ic_place_white_24px" />

        <Spinner
            android:id="@+id/spinner_region"
            style="@style/AppTheme.FilterSpinner"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/icon_city"
            android:entries="@array/regions" />

    </RelativeLayout>

    <!-- Price -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/icon_price"
            style="@style/AppTheme.FilterIcon"
            android:layout_centerVertical="true"
            android:tint="@color/greySecondary"
            app:srcCompat="@drawable/ic_today_white_24dp" />

        <Spinner
            android:id="@+id/spinner_price"
            style="@style/AppTheme.FilterSpinner"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/icon_price"
            android:entries="@array/trek_date" />

    </RelativeLayout>

    <!-- Trek Details -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/icon_trek_details"
            style="@style/AppTheme.FilterIcon"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:tint="@color/greySecondary"
            app:srcCompat="@drawable/ic_today_white_24dp" />

        <EditText
            android:id="@+id/edit_trek_details"
            style="@style/AppTheme.FilterSpinner"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/icon_trek_details"
            android:hint=""
            />

    </RelativeLayout>

    <!-- Cancel and apply buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_cancel"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="@color/greySecondary"
            android:theme="@style/ThemeOverlay.FilterButton" />


        <Button
            android:id="@+id/button_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/apply"
            android:theme="@style/ThemeOverlay.FilterButton" />

    </LinearLayout>

</LinearLayout>

